--- a/Streams.Core/Streams.csproj
+++ b/Streams.Core/Streams.csproj
@@ -2,13 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard1.0</TargetFramework>
-    <Version>0.1.2-alpha</Version>
+    <Version>0.1.3-alpha</Version>
     <PackageId>Com.RFranco.Streams</PackageId>
     <Title>Streams</Title>
     <Description>A very simple stream processing library.</Description>
     <Authors>Ruben Martinez, Javier Solana</Authors>
     <Copyright>Copyright R.Franco Technologies 2019</Copyright>
-    <PackageTags>Stream Sink Source Sreaming Publisher Subscriber</PackageTags>
+    <PackageTags>Stream Sink Source Streaming Publisher Subscriber</PackageTags>
     <PackageLicenseExpression>LGPL-3.0-or-later</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/rfrancotechnologies/streams</PackageProjectUrl>
     <IncludeSource>false</IncludeSource>
