--- a/Streams.Core/Streams.csproj
+++ b/Streams.Core/Streams.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard1.0</TargetFramework>
-    <Version>0.1.3-alpha</Version>
+    <Version>0.1.7-alpha</Version>
     <PackageId>Com.RFranco.Streams</PackageId>
     <Title>Streams</Title>
     <Description>A very simple stream processing library.</Description>
@@ -13,7 +13,7 @@
     <PackageProjectUrl>https://github.com/rfrancotechnologies/streams</PackageProjectUrl>
     <IncludeSource>false</IncludeSource>
     <PackageReleaseNotes>
-      Corrected namespace and added possibility to stop event sources via a CancellationToken.
+      Removed MaxBatchSize and BatchTimeout from the sink interface, as they are considered specific properties to each concrete sink.
     </PackageReleaseNotes>
   </PropertyGroup>
 
