--- a/Streams.Elastic/Streams.Elastic.csproj
+++ b/Streams.Elastic/Streams.Elastic.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.0.1-alpha</Version>
+    <Version>0.0.2-alpha</Version>
     <PackageId>Com.RFranco.Streams.Elastic</PackageId>
     <Title>Streams.Kafka</Title>
     <Description>Elastic sink for the Com.RFranco.Streams library.</Description>
@@ -13,14 +13,12 @@
     <PackageProjectUrl>https://github.com/rfrancotechnologies/streams</PackageProjectUrl>
     <IncludeSource>false</IncludeSource>
     <PackageReleaseNotes>
-      First version.
+      Retry policy removed in Bulk process.
     </PackageReleaseNotes>    
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Com.RFranco.Streams" Version="0.1.9-alpha" />
     <PackageReference Include="NEST" Version="6.8.0" />
-    <PackageReference Include="Polly" Version="6.1.2" />
-  </ItemGroup>
-
+  </ItemGroup>  
 </Project>
