--- a/Streams.Kafka/Streams.Kafka.csproj
+++ b/Streams.Kafka/Streams.Kafka.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.1.6-alpha</Version>
+    <Version>0.1.7-alpha</Version>
     <PackageId>Com.RFranco.Streams.Kafka</PackageId>
     <Title>Streams.Kafka</Title>
     <Description>Kafka source and sink for the Com.RFranco.Streams library.</Description>
@@ -13,7 +13,7 @@
     <PackageProjectUrl>https://github.com/rfrancotechnologies/streams-kafka</PackageProjectUrl>
     <IncludeSource>false</IncludeSource>
     <PackageReleaseNotes>
-      Generic key type.
+      Added SetStatisticsHandler support on producers and consumers.
     </PackageReleaseNotes>    
   </PropertyGroup>
 
