--- a/Streams.Core/Streams.csproj
+++ b/Streams.Core/Streams.csproj
@@ -1,19 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.0</TargetFramework>
-    <Version>0.1.9-alpha</Version>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>1.0.0-alpha</Version>
     <PackageId>Com.RFranco.Streams</PackageId>
     <Title>Streams</Title>
     <Description>A very simple stream processing library.</Description>
     <Authors>Ruben Martinez, Javier Solana</Authors>
-    <Copyright>Copyright R.Franco Technologies 2019</Copyright>
+    <Copyright>Copyright R.Franco Technologies 2020</Copyright>
     <PackageTags>Stream Sink Source Streaming Publisher Subscriber</PackageTags>
     <PackageLicenseExpression>LGPL-3.0-or-later</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/rfrancotechnologies/streams</PackageProjectUrl>
     <IncludeSource>false</IncludeSource>
     <PackageReleaseNotes>
-      Fixed State Serialization.
+      Added OnCommit action on StreamSink and removed Commit to source functionallity. Allow dump items overriding its timestamp. Simplify stream state management.
     </PackageReleaseNotes>
   </PropertyGroup>
 
