--- a/Streams.Kafka/Streams.Kafka.csproj
+++ b/Streams.Kafka/Streams.Kafka.csproj
@@ -2,24 +2,24 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.1.7-alpha</Version>
+    <Version>1.0.0-alpha</Version>
     <PackageId>Com.RFranco.Streams.Kafka</PackageId>
     <Title>Streams.Kafka</Title>
     <Description>Kafka source and sink for the Com.RFranco.Streams library.</Description>
     <Authors>Ruben Martinez, Javier Solana</Authors>
-    <Copyright>Copyright R.Franco Technologies 2019</Copyright>
+    <Copyright>Copyright R.Franco Technologies 2020</Copyright>
     <PackageTags>Kafka Stream Sink Source</PackageTags>
     <PackageLicenseExpression>LGPL-3.0-or-later</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/rfrancotechnologies/streams-kafka</PackageProjectUrl>
     <IncludeSource>false</IncludeSource>
     <PackageReleaseNotes>
-      Added SetStatisticsHandler support on producers and consumers.
+      Updated to use Stream.Core 1.0.X (removed source to commit and dumpTimer).
     </PackageReleaseNotes>    
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Com.RFranco.Streams" Version="0.1.7-alpha" />
+    <PackageReference Include="Com.RFranco.Streams" Version="1.0.0-alpha" />
     <PackageReference Include="Confluent.Kafka" Version="1.1.0" />
-  </ItemGroup>
+  </ItemGroup>  
 
 </Project>
