--- a/Streams.Core.State.FileSystem/Streams.Core.State.FileSystem.csproj
+++ b/Streams.Core.State.FileSystem/Streams.Core.State.FileSystem.csproj
@@ -2,23 +2,23 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.0.1-alpha</Version>
+    <Version>1.0.0-alpha</Version>
     <PackageId>Com.RFranco.Streams.Core.State.FileSystem</PackageId>
     <Title>Streams.Core.State.FileSystem</Title>
     <Description>Library to manage application state using the local file system.</Description>
     <Authors>Ruben Martinez;Javier Solana;R.Franco Techonologies</Authors>
-    <Copyright>Copyright R.Franco Techonologies 2019</Copyright>
+    <Copyright>Copyright R.Franco Techonologies 2020</Copyright>
     <PackageTags>Application State File System Local</PackageTags>
     <PackageLicenseExpression>LGPL-3.0-or-later</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/rfrancotechnologies/streams</PackageProjectUrl>
     <IncludeSource>false</IncludeSource>
     <PackageReleaseNotes>
-      First version.
+      Updated to use Stream.Core 1.0.X. State management simplification.
     </PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="LiteDB" Version="4.1.4" />
-    <PackageReference Include="Com.RFranco.Streams" Version="0.1.9-alpha" />    
+    <PackageReference Include="Com.RFranco.Streams" Version="1.0.0-alpha" /> 
   </ItemGroup>  
 </Project>
