--- a/Streams.Core.State.Redis/Streams.Core.State.Redis.csproj
+++ b/Streams.Core.State.Redis/Streams.Core.State.Redis.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.0-alpha</Version>
+    <Version>1.0.0-alpha1</Version>
     <PackageId>Com.RFranco.Streams.Core.State.Redis</PackageId>
     <Title>Streams.Core.State.Redis</Title>
     <Description>Library to manage application state using Redis.</Description>
@@ -13,12 +13,12 @@
     <PackageProjectUrl>https://github.com/rfrancotechnologies/streams</PackageProjectUrl>
     <IncludeSource>false</IncludeSource>
     <PackageReleaseNotes>
-      First Version
+      Allow one to many relationship between states and storage.
     </PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="StackExchange.Redis" Version="2.0.571"/>
-    <PackageReference Include="Com.RFranco.Streams" Version="1.0.0-alpha1" />    
+    <PackageReference Include="Com.RFranco.Streams" Version="1.0.0-alpha3" />    
   </ItemGroup>    
 </Project>
