--- a/Streams.Core/Streams.csproj
+++ b/Streams.Core/Streams.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.0-alpha1</Version>
+    <Version>1.0.0-alpha3</Version>
     <PackageId>Com.RFranco.Streams</PackageId>
     <Title>Streams</Title>
     <Description>A very simple stream processing library.</Description>
@@ -13,7 +13,7 @@
     <PackageProjectUrl>https://github.com/rfrancotechnologies/streams</PackageProjectUrl>
     <IncludeSource>false</IncludeSource>
     <PackageReleaseNotes>
-      Removed Generic approach to define StateStorage.
+      Allow one to many relationship between states and storage.
     </PackageReleaseNotes>
   </PropertyGroup>
 
