--- a/Streams.ChangeTracking/Streams.ChangeTracking.csproj
+++ b/Streams.ChangeTracking/Streams.ChangeTracking.csproj
@@ -2,24 +2,24 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.1.10-alpha</Version>
+    <Version>1.0.0-alpha</Version>
     <PackageId>Com.RFranco.Streams.ChangeTracking</PackageId>
     <Title>Streams.ChangeTracking</Title>
     <Description>Library to manage database change tracking as a stream.</Description>
     <Authors>Ruben Martinez;Javier Solana;R.Franco Techonologies</Authors>
-    <Copyright>Copyright R.Franco Techonologies 2019</Copyright>
+    <Copyright>Copyright R.Franco Techonologies 2020</Copyright>
     <PackageTags>Change Tracking SQL Server Outbox Pattern Stream Streaming Source Publisher</PackageTags>
     <PackageLicenseExpression>LGPL-3.0-or-later</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/rfrancotechnologies/streams</PackageProjectUrl>
     <IncludeSource>false</IncludeSource>
     <PackageReleaseNotes>
-      Added a public method to access current offset.
+      Remove Initial Load as ChangeTracking responsability. Refactor (simplify queries). Added ChangeTrackingContext / ChangeTrackingHandler to improve the observation.
     </PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="1.60.6" />
     <PackageReference Include="System.Data.SqlClient" Version="4.6.0" />
-    <PackageReference Include="Com.RFranco.Streams" Version="0.1.9-alpha" />
-  </ItemGroup>    
+    <PackageReference Include="Com.RFranco.Streams" Version="1.0.0-alpha3" />
+  </ItemGroup>   
 </Project>
