--- a/Streams.Kafka/Streams.Kafka.csproj
+++ b/Streams.Kafka/Streams.Kafka.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.0-alpha</Version>
+    <Version>1.0.0-alpha1</Version>
     <PackageId>Com.RFranco.Streams.Kafka</PackageId>
     <Title>Streams.Kafka</Title>
     <Description>Kafka source and sink for the Com.RFranco.Streams library.</Description>
@@ -13,13 +13,14 @@
     <PackageProjectUrl>https://github.com/rfrancotechnologies/streams-kafka</PackageProjectUrl>
     <IncludeSource>false</IncludeSource>
     <PackageReleaseNotes>
-      Updated to use Stream.Core 1.0.X (removed source to commit and dumpTimer).
+      Added retry policy when ProduceException is thrown in IProducer.Produce() invocation.
     </PackageReleaseNotes>    
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Com.RFranco.Streams" Version="1.0.0-alpha" />
+    <PackageReference Include="Com.RFranco.Streams" Version="1.0.0-alpha3" />
     <PackageReference Include="Confluent.Kafka" Version="1.1.0" />
+    <PackageReference Include="Polly" Version="7.2.0" />
   </ItemGroup>  
 
 </Project>
