--- a/Streams.ChangeTracking/Streams.ChangeTracking.csproj
+++ b/Streams.ChangeTracking/Streams.ChangeTracking.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.0-alpha1</Version>
+    <Version>1.0.0-alpha2</Version>
     <PackageId>Com.RFranco.Streams.ChangeTracking</PackageId>
     <Title>Streams.ChangeTracking</Title>
     <Description>Library to manage database change tracking as a stream.</Description>
@@ -13,7 +13,7 @@
     <PackageProjectUrl>https://github.com/rfrancotechnologies/streams</PackageProjectUrl>
     <IncludeSource>false</IncludeSource>
     <PackageReleaseNotes>
-      Invoke Notify() when the context is initialized and Database offset is updated.
+      Refactor ChangeTrackingStreamSource constructor method.
     </PackageReleaseNotes>
   </PropertyGroup>
 
