--- a/Streams.Core.State.Redis/Streams.Core.State.Redis.csproj
+++ b/Streams.Core.State.Redis/Streams.Core.State.Redis.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     <PackageId>Com.RFranco.Streams.Core.State.Redis</PackageId>
     <Title>Streams.Core.State.Redis</Title>
     <Description>Library to manage application state using Redis.</Description>
@@ -13,7 +13,7 @@
     <PackageProjectUrl>https://github.com/rfrancotechnologies/streams</PackageProjectUrl>
     <IncludeSource>false</IncludeSource>
     <PackageReleaseNotes>
-      Internal ConnectionMultiplexer is initialized with LazyThreadSafetyMode.PublicationOnly
+      Get and retrieve values in string format for primitive types.
     </PackageReleaseNotes>
   </PropertyGroup>
 
