--- a/Streams.ChangeTracking/Streams.ChangeTracking.csproj
+++ b/Streams.ChangeTracking/Streams.ChangeTracking.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.0-alpha4</Version>
+    <Version>1.0.0-rc1</Version>
     <PackageId>Com.RFranco.Streams.ChangeTracking</PackageId>
     <Title>Streams.ChangeTracking</Title>
     <Description>Library to manage database change tracking as a stream.</Description>
@@ -13,7 +13,7 @@
     <PackageProjectUrl>https://github.com/rfrancotechnologies/streams</PackageProjectUrl>
     <IncludeSource>false</IncludeSource>
     <PackageReleaseNotes>
-      Primitive types are stored as string to simplify a external management for example through Redis cli.
+      Minimal offset supported higher manage as observable event instead of ChangetrackingException.
     </PackageReleaseNotes>
   </PropertyGroup>
 
