--- a/Streams.ChangeTracking/Streams.ChangeTracking.csproj
+++ b/Streams.ChangeTracking/Streams.ChangeTracking.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.0-rc1</Version>
+    <Version>1.0.0</Version>
     <PackageId>Com.RFranco.Streams.ChangeTracking</PackageId>
     <Title>Streams.ChangeTracking</Title>
     <Description>Library to manage database change tracking as a stream.</Description>
@@ -13,13 +13,13 @@
     <PackageProjectUrl>https://github.com/rfrancotechnologies/streams</PackageProjectUrl>
     <IncludeSource>false</IncludeSource>
     <PackageReleaseNotes>
-      Minimal offset supported higher manage as observable event instead of ChangetrackingException.
+      Release 1.0.0
     </PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="1.60.6" />
     <PackageReference Include="System.Data.SqlClient" Version="4.6.0" />
-    <PackageReference Include="Com.RFranco.Streams" Version="1.0.0-alpha3" />
+    <PackageReference Include="Com.RFranco.Streams" Version="1.0.0" />
   </ItemGroup>   
 </Project>
