--- a/Streams.Core.State.FileSystem/Streams.Core.State.FileSystem.csproj
+++ b/Streams.Core.State.FileSystem/Streams.Core.State.FileSystem.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.0-alpha2</Version>
+    <Version>1.0.0</Version>
     <PackageId>Com.RFranco.Streams.Core.State.FileSystem</PackageId>
     <Title>Streams.Core.State.FileSystem</Title>
     <Description>Library to manage application state using the local file system.</Description>
@@ -13,12 +13,12 @@
     <PackageProjectUrl>https://github.com/rfrancotechnologies/streams</PackageProjectUrl>
     <IncludeSource>false</IncludeSource>
     <PackageReleaseNotes>
-      Allow one to many relationship between states and storage.
+      Release 1.0.0
     </PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="LiteDB" Version="4.1.4" />
-    <PackageReference Include="Com.RFranco.Streams" Version="1.0.0-alpha3" />
+    <PackageReference Include="Com.RFranco.Streams" Version="1.0.0" />
   </ItemGroup>
 </Project>
