--- a/Streams.Core.State.RocksDB/Streams.Core.State.RocksDB.csproj
+++ b/Streams.Core.State.RocksDB/Streams.Core.State.RocksDB.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.0-alpha2</Version>
+    <Version>1.0.0</Version>
     <PackageId>Com.RFranco.Streams.Core.State.RocksDB</PackageId>
     <Title>Streams.Core.State.RocksDB</Title>
     <Description>Library to manage application state using RocksDB.</Description>
@@ -13,12 +13,12 @@
     <PackageProjectUrl>https://github.com/rfrancotechnologies/streams</PackageProjectUrl>
     <IncludeSource>false</IncludeSource>
     <PackageReleaseNotes>
-      Allow one to many relationship between states and storage.
+      Release 1.0.0.
     </PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="RocksDbSharp" Version="5.17.2" />
-    <PackageReference Include="Com.RFranco.Streams" Version="1.0.0-alpha3" />    
+    <PackageReference Include="Com.RFranco.Streams" Version="1.0.0" />    
   </ItemGroup>    
 </Project>
