--- a/Streams.Kafka/Streams.Kafka.csproj
+++ b/Streams.Kafka/Streams.Kafka.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.0-alpha1</Version>
+    <Version>1.5.0</Version>
     <PackageId>Com.RFranco.Streams.Kafka</PackageId>
     <Title>Streams.Kafka</Title>
     <Description>Kafka source and sink for the Com.RFranco.Streams library.</Description>
@@ -13,13 +13,13 @@
     <PackageProjectUrl>https://github.com/rfrancotechnologies/streams-kafka</PackageProjectUrl>
     <IncludeSource>false</IncludeSource>
     <PackageReleaseNotes>
-      Added retry policy when ProduceException is thrown in IProducer.Produce() invocation.
+      Confluent.Kafka library updated to 1.5.0. Version aligned with Confluent.Kafka dependency version.
     </PackageReleaseNotes>    
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Com.RFranco.Streams" Version="1.0.0-alpha3" />
-    <PackageReference Include="Confluent.Kafka" Version="1.1.0" />
+    <PackageReference Include="Com.RFranco.Streams" Version="1.0.0" />
+    <PackageReference Include="Confluent.Kafka" Version="1.5.0" />
     <PackageReference Include="Polly" Version="7.2.0" />
   </ItemGroup>  
 
