--- a/Streams.Kafka/Streams.Kafka.csproj
+++ b/Streams.Kafka/Streams.Kafka.csproj
@@ -2,24 +2,24 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.5.0</Version>
+    <Version>1.5.3</Version>
     <PackageId>Com.RFranco.Streams.Kafka</PackageId>
     <Title>Streams.Kafka</Title>
     <Description>Kafka source and sink for the Com.RFranco.Streams library.</Description>
     <Authors>Ruben Martinez, Javier Solana</Authors>
-    <Copyright>Copyright R.Franco Technologies 2020</Copyright>
+    <Copyright>Copyright R.Franco Technologies 2021</Copyright>
     <PackageTags>Kafka Stream Sink Source</PackageTags>
     <PackageLicenseExpression>LGPL-3.0-or-later</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/rfrancotechnologies/streams-kafka</PackageProjectUrl>
     <IncludeSource>false</IncludeSource>
     <PackageReleaseNotes>
-      Confluent.Kafka library updated to 1.5.0. Version aligned with Confluent.Kafka dependency version.
+      Confluent.Kafka library updated to 1.5.3.
     </PackageReleaseNotes>    
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Com.RFranco.Streams" Version="1.0.0" />
-    <PackageReference Include="Confluent.Kafka" Version="1.5.0" />
+    <PackageReference Include="Confluent.Kafka" Version="1.5.3" />
     <PackageReference Include="Polly" Version="7.2.0" />
   </ItemGroup>  
 
