--- a/Streams.ChangeTracking/Streams.ChangeTracking.csproj
+++ b/Streams.ChangeTracking/Streams.ChangeTracking.csproj
@@ -2,18 +2,18 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     <PackageId>Com.RFranco.Streams.ChangeTracking</PackageId>
     <Title>Streams.ChangeTracking</Title>
     <Description>Library to manage database change tracking as a stream.</Description>
-    <Authors>Ruben Martinez;Javier Solana;R.Franco Techonologies</Authors>
-    <Copyright>Copyright R.Franco Techonologies 2020</Copyright>
+    <Authors>Ruben Martinez;Javier Solana;R.Franco Techonologies;Pablo Carmona</Authors>
+    <Copyright>Copyright R.Franco Techonologies 2021</Copyright>
     <PackageTags>Change Tracking SQL Server Outbox Pattern Stream Streaming Source Publisher</PackageTags>
     <PackageLicenseExpression>LGPL-3.0-or-later</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/rfrancotechnologies/streams</PackageProjectUrl>
     <IncludeSource>false</IncludeSource>
     <PackageReleaseNotes>
-      Release 1.0.0
+      Added upper limit on query which obtains last changes from table, in order to avoid duplicate items on stream.
     </PackageReleaseNotes>
   </PropertyGroup>
 
