--- a/Streams.Kafka/Streams.Kafka.csproj
+++ b/Streams.Kafka/Streams.Kafka.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.7.0</Version>
+    <Version>1.8.0</Version>
     <PackageId>Com.RFranco.Streams.Kafka</PackageId>
     <Title>Streams.Kafka</Title>
     <Description>Kafka source and sink for the Com.RFranco.Streams library.</Description>
@@ -13,12 +13,12 @@
     <PackageProjectUrl>https://github.com/rfrancotechnologies/streams-kafka</PackageProjectUrl>
     <IncludeSource>false</IncludeSource>
     <PackageReleaseNotes>
-      Confluent.Kafka library updated to 1.7.0.
+      Updated Streams library version and implemented functionality to externalize kafka offsets initialization.
     </PackageReleaseNotes>    
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Com.RFranco.Streams" Version="1.0.0" />
+    <PackageReference Include="Com.RFranco.Streams" Version="1.1.0" />
     <PackageReference Include="Confluent.Kafka" Version="1.7.0" />
     <PackageReference Include="Polly" Version="7.2.0" />
   </ItemGroup>  
