Implemented way to sort tracked DB changes by a config specified column, instead of primary key column

--- a/Streams.ChangeTracking/Streams.ChangeTracking.csproj
+++ b/Streams.ChangeTracking/Streams.ChangeTracking.csproj
@@ -20,5 +20,6 @@
     <PackageReference Include="Dapper" Version="1.60.6" />
     <PackageReference Include="System.Data.SqlClient" Version="4.6.0" />
     <PackageReference Include="Com.RFranco.Streams" Version="1.1.0" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
   </ItemGroup>   
 </Project>
